[gd_scene load_steps=3 format=3 uid="uid://cj6mrpskmabo3"]

[ext_resource type="FontFile" uid="uid://biruwhwyv1g4d" path="res://Fonts/InfynyteBody-6ARg.otf" id="1_dvtp2"]
[ext_resource type="Script" path="res://GUI/SubmitScore/submit_score.gd" id="1_q3n61"]

[node name="SubmitScore" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q3n61")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Enter your name"

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_dvtp2")
theme_override_font_sizes/font_size = 64
placeholder_text = "Your nickname"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Cancel" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
modulate = Color(0.94902, 0.313726, 0.32549, 1)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Cancel"

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="Submit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
modulate = Color(0.45098, 1, 0.478431, 1)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
disabled = true
text = "Submit"

[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Submit" to="." method="_on_submit_pressed"]
